syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.ednelson";
option java_outer_classname = "ChavePix";
option objc_class_prefix = "HLW";

package br.com.zup.ednelson;

service ChavePixService {
  rpc cadastrar (ChaveRequest) returns (ChaveResponse) {}
}

service RemoveChavePixService {
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

enum TipoChave {
  TIPO_CHAVE_DESCONHECIDO = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message ChaveRequest {
  string clienteId = 1;
  string chave = 2;
  TipoChave tipoChave = 3;
  TipoConta tipoConta = 4;
}

message ChaveResponse {
  string chavePixId = 1;
  string clienteId = 2;
}

message RemoveChavePixRequest {
  string clienteId = 1;
  string chavePixId = 2;
}

message RemoveChavePixResponse {
  string clienteId = 1;
  string chavePixId = 2;
}